--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -142,3 +142,15 @@ footer {
   padding: 20px;
   color: #666;
 }
+
+ul.participants-list {
+  margin: 10px 0 0 20px;
+  padding-left: 20px;
+  list-style-type: disc;
+  color: #1a237e; /* Dark blue for participants */
+  font-size: 14px;
+}
+
+ul.participants-list li {
+  margin-bottom: 5px;
+}
